--- a/src/componants/Blogs/Blogs.css
+++ b/src/componants/Blogs/Blogs.css
@@ -4,21 +4,17 @@
 }
 
 .blogs-Ques {
-    color: red;
+    color: blueviolet;
 }
 
 span {
-    color: red;
+    color: rgb(255, 0, 179);
 }
 
 .blogs-container {
-    border: 10px solid black;
+    
     margin: 20px;
     border-radius: 10px;
-    background-color: bisque;
+    background-color: whitesmoke;
 }
 
-.blogs-container:hover {
-    background-color: burlywood;
-    transition-duration: 5s;
-}
