--- a/src/componants/Footer/Footer.css
+++ b/src/componants/Footer/Footer.css
@@ -5,10 +5,9 @@
 
 .footer {
     text-align: center;
-    background-color: black;
+    background-color: lightslategray;
     color: white;
     padding: 10px;
     margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-}
+   margin-bottom: 12px;
+};
