--- a/src/componants/Banner/Banner.css
+++ b/src/componants/Banner/Banner.css
@@ -1,7 +1,3 @@
 .carosol-container {
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom: 15px;
-    position: relative;
+   background-color: aquamarine;
 }
