--- a/src/componants/Product/Product.css
+++ b/src/componants/Product/Product.css
@@ -1,7 +1,7 @@
 .card {
     
     border-radius: 10px;
-    text-shadow: 2px 2px 5px;
+    text-shadow: 2px 2px 5px red;
     box-shadow: 10px 10px 8px lightblue;
     
 }
